# halcon

Examples/low_pass_filter_sim/: README.md  main.py
Examples/low_pass_filter_sim/conf/: command.cmd  settings.yaml
Examples/low_pass_filter_sim/run/: time.txt
Examples/low_pass_filter_sim/src/: main.cpp
Examples/low_pass_filter_sim/tests/: plot.py
core/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/debug/: CMakeLists.txt  main.py
core/debug/conf/: command.cmd  hierarchy.txt  settings.yaml
core/debug/src/: main.cpp
core/debug/src/awgn_channel/: awgn_channel.cpp
core/debug/src/ber_counter/: ber_counter.cpp  ber_counter.hpp  qam_tables.h
core/debug/src/downsampler/: downsampler.cpp
core/debug/src/root/: root.cpp  root.hpp
core/debug/src/symbol_generator/: symbol_generator.cpp  symbol_generator.hpp
core/debug/src/upsampler/: upsampler.cpp
core/debug/tests/: plot.py
core/debug/tests/ber_vs_ebno/: slides.tex  sweep.py
core/docs/: doxygen.conf
core/sandbox/derived_clocks/: Makefile  clock.hpp  main.cpp  scheduler.hpp  time_accumulator.hpp
core/sandbox/fixed_point/: main.cpp
core/sandbox/kahan_sum_algorithm/: Makefile  main.cpp
core/src/clock/: abstract_clock.cpp  abstract_clock.hpp  clock.cpp  clock_linker.cpp  time_accumulator.cpp
core/src/command/: command.cpp  command.hpp  final_log_command.cpp  log_command.cpp  set_command.cpp
core/src/command_handler/: command_handler.cpp  command_handler.hpp
core/src/command_line_parser/: CLI11.hpp
core/src/handler/: abstract_handler.cpp  handler_array_ac_fixed.hpp  handler_array_complex.hpp  handler_clock.hpp  handler_complex.hpp  handler_port_array_ac_fixed.hpp  handler_port_clock.hpp
core/src/logger/: logger.cpp
core/src/module/: module.cpp
core/src/nameable/: nameable.cpp
core/src/port/: abstract_port.cpp  port.cpp  port_array.hpp  port_single.hpp
core/src/reflection/: advanced_reflection.cpp  basic_reflection.cpp  intermediate_reflection.cpp  intermediate_reflection.hpp
core/src/register/: abstract_register.cpp  abstract_register.hpp  register.cpp  register.hpp
core/src/scheduler/: scheduler.cpp
core/src/setter/: setter.cpp
core/src/simulator/: simulator.cpp
core/src/tictoc/: tictoc.cpp
examples/: .gitignore  .gitmodules
examples/lib/core/: push.sh  release.hash
examples/lib/modules/: README.md
examples/lib/tools/: README.md
examples/low_pass_filter_sim/conf/: hierarchy.txt
examples/qam_basic_sim/: CMakeLists.txt  README.md  main.py
examples/qam_basic_sim/conf/: command.cmd  hierarchy.txt  settings.yaml
modules/: README.md
modules/agc/: agc.cpp  agc.hpp
modules/average_filter/: average_filter.hpp
modules/awgn_channel/: awgn_channel.cpp  awgn_channel.hpp
modules/ber_counter/: ber_counter.cpp  ber_counter.hpp  qam_tables.h
modules/carrier_error/: carrier_error.cpp  carrier_error.hpp
modules/carrier_recovery/: carrier_recovery.cpp  carrier_recovery.hpp
modules/cycle_slip_corrector/: cycle_slip_corrector.cpp  cycle_slip_corrector.hpp
modules/downsampler/: downsampler.cpp  downsampler.hpp
modules/fir_filter/: fir_filter.cpp  fir_filter.hpp
modules/fse/: fse.cpp  fse.hpp
modules/iir_filter/: iir_filter.cpp
modules/lagrange_interpolator/: lagrange_interpolator.cpp  lagrange_interpolator.hpp
modules/linear_interpolator/: linear_interpolator.cpp  linear_interpolator.hpp
modules/lms/: lms.cpp  lms.hpp
modules/parallel_filter/: parallel_filter.cpp
modules/parallel_to_serial/: parallel_to_serial.hpp
modules/rc_filter/: rc_filter.hpp
modules/rrc_filter/: rrc_filter.hpp
modules/serial_to_parallel/: serial_to_parallel.cpp  serial_to_parallel.hpp
modules/shift_register/: shift_register.cpp  shift_register.hpp
modules/sin_generator/: sin_generator.cpp
modules/slicer/: slicer.cpp  slicer.hpp
modules/symbol_generator/: symbol_generator.cpp  symbol_generator.hpp
modules/template/: template.cpp  template.hpp
modules/timing_recovery/: timing_recovery.cpp  timing_recovery.hpp
modules/tr_interpolator/: tr_interpolator.cpp  tr_interpolator.hpp
modules/upsampler/: upsampler.cpp  upsampler.hpp
release/: README.md  push.sh  release.hash
release/inc/: CLI11.hpp  abstract_clock.hpp  abstract_handler.hpp  abstract_port.hpp  abstract_register.hpp  ac_fixed.h  ac_int.h  advanced_reflection.hpp  basic_reflection.hpp  clock.hpp  clock_linker.hpp  command.hpp  command_handler.hpp  final_log_command.hpp  halcon.hpp  handler.hpp  handler_ac_fixed.hpp  handler_array.hpp  handler_array_ac_fixed.hpp  handler_array_complex.hpp  handler_clock.hpp  handler_complex.hpp  handler_port.hpp  handler_port_ac_fixed.hpp  handler_port_array.hpp  handler_port_array_ac_fixed.hpp  handler_port_array_complex.hpp  handler_port_clock.hpp  handler_port_complex.hpp  intermediate_reflection.hpp  log_command.hpp  logger.hpp  module.hpp  nameable.hpp  port.hpp  port_array.hpp  port_single.hpp  port_single_ac_fixed.hpp  register.hpp  register_array.hpp  (+7 more)
template/: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.py
template/conf/: command.cmd  settings.yaml
template/img/: example_low_pass_filter.tex
template/src/: main.cpp
template/src/filter/: filter.cpp  filter.hpp
template/src/root/: root.cpp  root.hpp
template/src/sin_generator/: sin_generator.cpp  sin_generator.hpp
template/tests/: plot.py
tools/: .gitignore  README.md
tools/docker/: build.sh  dockerfile  run.sh
tools/templates/: CMakeLists.txt  main.cpp  main.py  module.cpp  module.hpp  plot.py  root.cpp  root.hpp  slides.py
tutorials/: .gitignore  .gitmodules  LICENSE  README.md
tutorials/img/: tutorial.tex
tutorials/lib/tools/templates/: CMakeLists.txt  main.py
tutorials/tp1/: README.md  main.py
tutorials/tp2/: CMakeLists.txt  README.md  main.py
tutorials/tp3/: README.md  main.py
tutorials/tp4/: CMakeLists.txt  README.md  main.py
tutorials/tp5/: README.md  main.py
tutorials/tp6/: README.md  main.py
tutorials/tp7/: README.md  main.py
tutorials/tp7_2/: README.md  main.py
tutorials/tp8/: README.md  main.py
tutorials/tp9/: README.md  main.py
(+260 files in other folders)
